# PAT-Solutions

./: .gitignore  CMakeLists.txt  readme.md
Advance/: 1002.cpp  1002_SIMPLE.cpp  1003.cpp  1003AGA.cpp  1004BFS.cpp  1004DFS.cpp  1005.cpp  1006.cpp  1007.cpp  1008.cpp  1009.cpp  1010.cpp  1011.cpp  1013DFS.cpp  1013USET.cpp  1015.cpp  1016.cpp  1018.cpp  1020.cpp  1021.cpp  1024MAX.cpp  1024MIN.cpp  1025.cpp  1028.cpp  1030.cpp  1031.cpp  1032.cpp  1035.cpp  1036.cpp  1039.cpp  1042.cpp  1043.cpp  1043AGA.cpp  1045LCS.cpp  1045LIS.cpp  1046.cpp  1046RUNTIMEERROR.cpp  1047  1047.cpp  1048-1.cpp  (+35 more)
Basic/: 1001  1001-害死人不偿命的(3n+1)猜想(15分).cpp  1001.cpp  1002.cpp  1003.cpp  1004.cpp  1005.cpp  1006.cpp  1007.cpp  1008.cpp  1009.cpp  1010.cpp  1019.cpp  1020.cpp  1022.cpp  1023.cpp  1032.cpp  1036.cpp  1040.cpp  1045.cpp  BFS求矩阵的块.cpp  DFS.cpp  n皇后.cpp  n皇后回溯法.cpp  区间不相交问题.cpp  好朋友.cpp  快速幂.cpp  木棒切割问题.cpp  求全排列.cpp  随机选择算法.cpp  高精度与低精度乘法.cpp  高精度与低精度除法.cpp  高精度减法.cpp  高精度加法.cpp
