cmake_minimum_required(VERSION 3.13)

#project name
project(PAT-Solutions)

set(CMAKE_CXX_STANDARD 14)
#
#MESSAGE(STATUS "Project: SERVER")               # 打印相关消息消息
#MESSAGE(STATUS "Project Directory: ${PROJECT_SOURCE_DIR}")

#add executable file
ADD_EXECUTABLE(1001 "./Basic/1001-害死人不偿命的(3n+1)猜想(15分).cpp")
ADD_EXECUTABLE(1002 "./Basic/1002-写出这个数(20分).cpp")
ADD_EXECUTABLE(1003 "./Basic/1003-我要通过(20分).cpp")